fixed a sizing issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   text-align: center;
   background: rgb(237,68,54);
   background-color: transparent;
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
